[gd_scene load_steps=14 format=3 uid="uid://upsw5aho5ygu"]

[ext_resource type="Script" uid="uid://b2b62f5wnojbh" path="res://scripts/player/weapons/player_magic_bullet.gd" id="1_aqhv5"]
[ext_resource type="Texture2D" uid="uid://duosk0i3ma7x0" path="res://assets/textures/Kenney Particles Transparent Background/flame_04.png" id="2_rp428"]
[ext_resource type="Texture2D" uid="uid://8coueektucvq" path="res://assets/textures/Kenney Particles Transparent Background/fire_01.png" id="3_5w1uk"]
[ext_resource type="AudioStream" uid="uid://c3xw1d5vuhy8x" path="res://assets/sounds/Battle/MagicWand/MagicHit/MagicWandHit_1.wav" id="4_rp428"]

[sub_resource type="SphereShape3D" id="SphereShape3D_rlome"]
radius = 0.26532

[sub_resource type="SphereShape3D" id="SphereShape3D_lof1i"]
radius = 4.0

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_ean8y"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("2_rp428")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_3rtgv"]
angle_min = -180.0
angle_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.8
scale_max = 1.2
color = Color(0.145031, 0.600068, 0.65509, 1)
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_xh7pu"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_0t0a4"]
transparency = 1
shading_mode = 0
vertex_color_use_as_albedo = true
albedo_texture = ExtResource("3_5w1uk")
billboard_mode = 3
billboard_keep_scale = true
particles_anim_h_frames = 1
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hb1it"]
angle_min = -180.0
angle_max = 180.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.4
color = Color(0.162275, 0.538649, 0.928602, 1)
hue_variation_min = -0.1
hue_variation_max = 0.1

[sub_resource type="QuadMesh" id="QuadMesh_78fn7"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_5w1uk"]
random_pitch = 1.2
streams_count = 1
stream_0/stream = ExtResource("4_rp428")

[node name="Bullet" type="Node3D" node_paths=PackedStringArray("magic_hit_audio") groups=["weapon"]]
script = ExtResource("1_aqhv5")
magic_hit_audio = NodePath("MagicHitAudioStreamPlayer3D")

[node name="Hitbox" type="Area3D" parent="." groups=["weapon"]]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
shape = SubResource("SphereShape3D_rlome")

[node name="DetectionArea" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="DetectionArea"]
shape = SubResource("SphereShape3D_lof1i")

[node name="GPUParticles3D" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_ean8y")
amount = 20
lifetime = 0.1
process_material = SubResource("ParticleProcessMaterial_3rtgv")
draw_pass_1 = SubResource("QuadMesh_xh7pu")

[node name="GPUParticles3D2" type="GPUParticles3D" parent="."]
material_override = SubResource("StandardMaterial3D_0t0a4")
amount = 20
lifetime = 0.15
process_material = SubResource("ParticleProcessMaterial_hb1it")
draw_pass_1 = SubResource("QuadMesh_78fn7")

[node name="MagicHitAudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_5w1uk")
volume_db = -10.0
bus = &"SFX"

[connection signal="body_entered" from="Hitbox" to="." method="_on_area_3d_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
